# the-wall-api

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py  wall_config.json
config/docker/: Dockerfile.demo  Dockerfile.dev  Dockerfile.prod  docker-compose-demo.yml  docker-compose-dev+migrations.sh  docker-compose-dev.yml  docker-compose-prod-v1.yml  docker-compose-prod-v2.yml  docker-compose-prod.yml
config/docker/scripts/: docker-compose-dev+migrations.sh  start_celery_computation_worker.sh  wait_for_celery_worker.py  wait_for_postgres.py
config/envs/: postgres_dev.env.example  the_wall_api_dev.env.example
config/envs/common/: redis.conf.example
config/envs/dev/: postgres_dev.env.example  the_wall_api_dev.env.example
config/envs/prod/: django_secret_key_prod.env.example  postgres_prod.env.example  redis_prod.env.example  the_wall_api_prod.env.example
config/linux/: common_utils.sh  linux_install_prerequisites.sh  refresh_allowed_hosts_wsl2.sh
config/scripts/common/: poetry_shell.sh
config/scripts/docker/: docker-compose-dev+migrations.sh  start_celery_computation_worker.sh  wait_for_celery_worker.py  wait_for_postgres.py
config/scripts/linux/: linux_install_prerequisites.sh  refresh_allowed_hosts_wsl2.sh
config/secrets/: django_secret_key.txt.example  postgres_db.txt.example  postgres_password.txt.example  postgres_user.txt.example  redis_password.txt.example
the_wall_api/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  wall_construction.py
the_wall_api/tests/: batch_tests_runner.py  test_caching.py  test_celery_concurrent_tasks.py  test_celery_sequential_tasks.py  test_celery_tasks.py  test_djoser_integration.py  test_locks.py  test_models.py  test_requests_flow.py  test_serializers.py  test_throttling.py  test_urls.py  test_utils.py  test_views.py  test_wallconstruction.py
the_wall_api/tests/test_views/: base_test_views.py  test_cost_and_usage_views.py  test_profiles_views.py  test_wallconfig_file_views.py  test_wallconfig_reference_views.py
the_wall_api/utils/: api_utils.py  celery_task_utils.py  concurrent_simulation_utils.py  config_utils.py  custom_json_formatter.py  env_utils.py  error_utils.py  file_utils.py  proxy_wall_creation.py  storage_utils.py  wall_config_utils.py
the_wall_api/utils/concurrency_utils/: base_concurrency_utils.py  multiprocessing_utils.py  threading_utils.py
the_wall_api/utils/message_themes/: base.py  errors.py  info.py  openapi.py  success.py
the_wall_api/utils/open_api_schema_utils/: auth_schema_extensions.py  djoser_utils.py  open_api_examples.py  (+6 more)
