[tool.poetry]
name = "the-wall-api"
version = "0.1.0"
description = "The Wall DRF API"
authors = ["Aleksandar Dimitrov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.2"
openapi-spec-validator = "^0.7.1"
redis = "^5.0.8"
django-redis = "^5.4.0"
psycopg2 = "^2.9.9"
xxhash = "^3.5.0"
celery = "^5.4.0"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
