[tool.poetry]
name = "the-wall-api"
version = "0.1.0"
description = "The Wall DRF API"
authors = ["Aleksandar Dimitrov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.2"
djangorestframework = "3.15.2"
python-dotenv = "1.0.1"
drf-spectacular = "0.27.2"
openapi-spec-validator = "0.7.1"
redis = "5.2.0"
django-redis = "5.4.0"
psycopg2 = "2.9.10"
xxhash = "3.5.0"
celery = "5.4.0"
python-json-logger = "2.0.7"
djoser = "2.3.1"
amqp = "5.2.0"
asgiref = "3.8.1"
attrs = "24.2.0"
billiard = "4.2.1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cryptography = "43.0.3"
defusedxml = "0.7.1"
djangorestframework-simplejwt = "5.3.1"
idna = "3.10"
inflection = "0.5.1"
jsonschema = "4.23.0"
jsonschema-path = "0.3.3"
jsonschema-specifications = "2023.12.1"
kombu = "5.4.2"
lazy-object-proxy = "1.10.0"
oauthlib = "3.2.2"
openapi-schema-validator = "0.6.2"
pathable = "0.4.3"
prompt-toolkit = "3.0.48"
pycparser = "2.22"
pyjwt = "2.10.0"
python-dateutil = "2.9.0.post0"
python3-openid = "3.2.0"
pyyaml = "6.0.2"
referencing = "0.35.1"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rfc3339-validator = "0.1.4"
rpds-py = "0.20.0"
six = "1.16.0"
social-auth-app-django = "5.4.2"
social-auth-core = "4.5.4"
sqlparse = "0.5.1"
tzdata = "2024.2"
uritemplate = "4.1.1"
urllib3 = "2.2.3"
vine = "5.1.0"
wcwidth = "0.2.13"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
